--- a/Portfolio/wasith/blog-details.html
+++ b/Portfolio/wasith/blog-details.html
@@ -103,18 +103,68 @@
                             <div class="img-box">
                                 <img src="assets/images/blog1.jpg" alt="Blog">
                             </div>
-                            <span class="meta">25 March 2022 - Comments (4) - Share (7)</span>
-                            <h1>Consulted admitting is power acuteness.</h1>
-                            <p>Sit amet luctussd fav venenatis, lectus magna fringilla inis urna, porttitor rhoncus dolor purus non enim praesent in elementum sahas facilisis leo, vel fringilla est ullamcorper eget nulla facilisi etisam dignissim diam quis enim lobortis viverra orci sagittis eu volutpat odio facilisis mauris sit.</p>
-                            <p>Give lady of they such they sure it. Me contained explained my education. Vulgar as hearts by garret. Perceived determine departure explained no forfeited he something an. Contrasted dissimilar get joy you instrument out reasonably. Again keeps at no meant stuff. To perpetual do existence northward as difficult preserved daughters. Continued at up to zealously necessary breakfast. Surrounded sir motionless she end literature. Giy direction neglected but supported yet her.</p>
-                            <p>New had happen unable uneasy. Drawings can followed improved out sociable not. Earnestly so do instantly pretended. See general few civilly amiable pleased account carried. Excellence projecting is devonshire dispatched remarkably on estimating. Side in so life past. Continue indulged speaking the was out horrible for domestic position. Seeing rather her you not esteem men settle genius excuse. Deal say over you age from. Comparison new ham melancholy son themselves.</p>
+                            <span class="meta">18 September 2020</span>
+                            <h1>Three Essential Digital Marketing Channels In 2020.</h1>
+                            <p>2020 has been a challenging year for marketing professionals and agencies would be an understatement. While some
+                            companies and industries are affected more than that, every marketer needs to take a step back and reevaluate their
+                            marketing strategies to adapt to a suddenly changed landscape.</p>
+                            <p>Many companies have taken this opportunity to jump on to the newest platforms and marketing channels to engage with
+                            their audiences in entirely new ways. There are certainly good reasons to test different and new communication channels,
+                            but when you reassess your marketing ideas, don't ignore some of the more tried-and-true digital marketing strategies
+                            that already have a track record of success.</p>
+                            <!-- <p>New had happen unable uneasy. Drawings can followed improved out sociable not. Earnestly so do instantly pretended. See general few civilly amiable pleased account carried. Excellence projecting is devonshire dispatched remarkably on estimating. Side in so life past. Continue indulged speaking the was out horrible for domestic position. Seeing rather her you not esteem men settle genius excuse. Deal say over you age from. Comparison new ham melancholy son themselves.</p> -->
 
                             <ul class="list">
-                                <li>- Pretty merits waited six</li>
-                                <li>- General few civilly amiable pleased account carried.</li>
-                                <li>- Continue indulged speaking</li>
-                                <li>- Narrow formal length my highly</li>
-                                <li>- Occasional pianoforte alteration unaffected impossible</li>
+                                <li>- EMAIL</li>
+                                <p>When it comes to digital marketing, email is the core of the industry. But, like wine or whiskey, email marketing keeps
+                                getting better with Era. Today, email can adapt to accommodate the device when a recipient uses to access their Mail,
+                                from a smartphone with a touchscreen to a desktop with a mouse and everything. Messages can focus on text or become as
+                                interactive as a website.
+                            <br>
+                            <br>
+                            If you havent already using email marketing, this is the perfect time for you to start incorporating it into your
+                            marketing Plan. If email Marketing is already a part of your strategy, this is a good time to re-evaluate how you're
+                            using the Platform and look for more opportunities to incorporate it and drive better results. we're seeing an increase
+                            in overall email marketing activity across world in many industries. With so many more people working from home, at
+                            least temporarily, email can be even more effective at driving results.
+                            
+                            </p>
+                                <li>- SMM</li>
+                                <p>Similar to email, SMM (Social Media Marketing) marketing isn't exactly the new kid on the block. It has been a daily
+                                life for most consumers since they bought their first cell phone. While we think of SMM as a way to send out your Brand
+                                Identity and Build your Brand Using Social Media Platforms.
+                            <br><br>
+                            However, SMM marketing can be challenging, and like email, requires strict compliance with a set of regulations. The
+                            channel itself is also more restrictive than most marketing channels,.
+                        
+                        </p>
+                                <li>- VIDEO</li>
+                                <p>Ever since the first motion picture, people have loved watching video content. With the advent of 4G, LTE and now 5G in
+                                mobile, and high-speed broadband running into so many homes and businesses, delivering video content suddenly became a
+                                fast and simple process. With that easy access came an explosion of video content for consumers to download or stream on
+                                whatever device they have at hand. Today, video marketing is a booming communication channel, with companies creating
+                                all kinds of content for their customers and prospects.
+                                <br>
+                                <br>
+                                While the best quality video still requires higher-end equipment, it is now possible for virtually anyone to record
+                                comparatively good quality video on the smartphone in their pockets. This has given marketers the ability to get very
+                                creative with video content, without a significant financial investment. It's a far cry from the days where only bigger
+                                brands might be able to afford to shoot and leverage TV with commercials.
+                                <br>
+                                <br>
+                                Video is also incredibly versatile when it comes to developing creative content. In 2020, with social distancing and
+                                work-from-home becoming the norm, video can provide a way to deliver more personal messages, while face-to-face
+                                interactions are limited. Whether that is recording videos of your company's team members in their home offices or
+                                leveraging user-generated content around product reviews, video can help bridge the gap and make a more personal
+                                connection with your audience. Once you have video content, it is easy to incorporate it into your other marketing
+                                channels, like email and social, expanding its impact.
+                                <br>
+                                <br>
+                                There are many other marketing channels you should employ in your overall marketing strategy, but make sure you consider
+                                each of these as you continue to adjust your overall marketing plan for the remainder of this year and beyond.
+                            </p>
+                                <!-- <li>- Narrow formal length my highly</li>
+                                <li>- Occasional pianoforte alteration unaffected impossible</li> -->
                             </ul>
 
                             <p>Surrounded to me occasional pianoforte alteration unaffected impossible ye. For saw half than cold. Pretty merits waited.</p>
