--- a/Portfolio/wasith/blog.html
+++ b/Portfolio/wasith/blog.html
@@ -88,7 +88,7 @@
             <div class="container">
                 <div class="breadcrumb-content" data-aos="fade-up">
                     <p>HOME - BLOG</p>
-                    <h1 class="section-heading"><img src="assets/images/star-2.png" alt="Star"> Blog with rightsidebar <img src="assets/images/star-2.png" alt="Star"></h1>
+                    <h1 class="section-heading"><img src="assets/images/star-2.png" alt="Star"> Blog <img src="assets/images/star-2.png" alt="Star"></h1>
                 </div>
             </div>
         </section>
@@ -98,17 +98,19 @@
         <section class="blog-area">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8">
+                    <div class="col-md-12">
                         <div class="blog-items">
                             <div class="blog-item" data-aos="zoom-in">
                                 <div class="img-box">
                                     <img src="assets/images/blog1.jpg" alt="Blog">
                                 </div>
                                 <div class="content">
-                                    <span class="meta">25 March 2022 - Comments (4) - Share (7)</span>
-                                    <h1><a href="blog-details.html">Consulted admitting is power acuteness.</a></h1>
-                                    <p>Sit amet luctussd fav venenatis, lectus magna fringilla inis urna, porttitor rhoncus dolor purus non enim praesent in elementum sahas facilisis leo, vel fringilla est ullamcorper eget nulla facilisi etisam dignissim diam quis enim lobortis viverra orci sagittis eu volutpat odio facilisis mauris sit.</p>
-                                    <a href="blog-details.html" class="theme-btn">Read More</a>
+                                    <span class="meta">18 September 2020</span>
+                                    <h1><a href="https://thedaxads.com/Three-Essential-Digital-Marketing-Channels-In-2020">Three Essential Digital Marketing Channels In 2020</a></h1>
+                                    <p>2020 has been a challenging year for marketing professionals and agencies would be an understatement. While some
+                                    companies and industries are affected more than that, every marketer needs to take a step back and reevaluate their
+                                    marketing strategies to adapt to a suddenly changed landscape</p>
+                                    <a href="https://thedaxads.com/Three-Essential-Digital-Marketing-Channels-In-2020" class="theme-btn">Read More</a>
                                 </div>
                             </div>
 
@@ -117,28 +119,65 @@
                                     <img src="assets/images/blog2.jpg" alt="Blog">
                                 </div>
                                 <div class="content">
-                                    <span class="meta">25 March 2022 - Comments (4) - Share (7)</span>
-                                    <h1><a href="blog-details.html">Unsatiable entreaties may collecting Power.</a></h1>
-                                    <p>Sit amet luctussd fav venenatis, lectus magna fringilla inis urna, porttitor rhoncus dolor purus non enim praesent in elementum sahas facilisis leo, vel fringilla est ullamcorper eget nulla facilisi etisam dignissim diam quis enim lobortis viverra orci sagittis eu volutpat odio facilisis mauris sit.</p>
-                                    <a href="blog-details.html" class="theme-btn">Read More</a>
+                                    <span class="meta">10 February 2021</span>
+                                    <h1><a href="https://thedaxads.com/Revolution-in-digital-Space">REVOLUTION IN DIGITAL SPACE.</a></h1>
+                                    <p>The Year 2020 has been a year of change both within the real and virtual world. the huge revolution within the Digital
+                                    World was extraordinary. Some changes were positive and a few negative. it had been the time of latest normal which
+                                    seemed impossible before.</p>
+                                    <a href="https://thedaxads.com/Revolution-in-digital-Space" class="theme-btn">Read More</a>
                                 </div>
                             </div>
                             
                             <div class="blog-item" data-aos="zoom-in">
                                 <div class="img-box">
-                                    <img src="assets/images/blog1.jpg" alt="Blog">
+                                    <img src="assets/images/blog3.jpg" alt="Blog">
                                 </div>
                                 <div class="content">
-                                    <span class="meta">25 March 2022 - Comments (4) - Share (7)</span>
-                                    <h1><a href="blog-details.html">Discovery incommode earnestly he commanded</a></h1>
-                                    <p>Sit amet luctussd fav venenatis, lectus magna fringilla inis urna, porttitor rhoncus dolor purus non enim praesent in elementum sahas facilisis leo, vel fringilla est ullamcorper eget nulla facilisi etisam dignissim diam quis enim lobortis viverra orci sagittis eu volutpat odio facilisis mauris sit.</p>
-                                    <a href="blog-details.html" class="theme-btn">Read More</a>
+                                    <span class="meta">10 February 2021</span>
+                                    <h1><a href="https://thedaxads.com/You-Have-a-chance-to-Refine-Your-Marketing-Approach">You Have a chance to Refine Your Marketing Approach</a></h1>
+                                    <p>2020 forced many small businesses to become focused in ways they didn’t imagine last winter. I’m not gonna enter the
+                                    apparent details that we’ve all lived through recently. You’re alright conscious of them a day . At DAX , we’ve refined
+                                    our approach during this point , and I’ll share how during this post. Hopefully you’ll be inspired to require actions
+                                    that assist you refine your marketing approach and position you well regardless of the business season you’re in.</p>
+                                    <a href="https://thedaxads.com/You-Have-a-chance-to-Refine-Your-Marketing-Approach" class="theme-btn">Read More</a>
+                                </div>
+                            </div>
+
+                            <div class="blog-item" data-aos="zoom-in">
+                                <div class="img-box">
+                                    <img src="assets/images/blog4.jpg" alt="Blog">
+                                </div>
+                                <div class="content">
+                                    <span class="meta">10 February 2021</span>
+                                    <h1><a href="https://thedaxads.com/top-choices-in-web-hosting">Top Choices In Web Hosting</a></h1>
+                                    <p>In today’s Society, if you have got something to say, do, sell or whatever it is, you are going to need a website and
+                                    you are going to need a really good provider to make sure that your traffic is managed that people can see it’s
+                                    visibility and that the website is well protected and so many things that make sure your website lives up to the
+                                    standard of what your customers should expect from you. So, like all things Web Hosting services comes in all shapes and
+                                    sizes in whether they are offering shared hosting, dedicated hosting, VPS, Manage Hosting, Server Cores, Different RAMs,
+                                    SSL Certificates etc. ... its endless, there is just an endless number of things that web hosting servers offers to you
+                                    because what everybody needs is different.</p>
+                                    <a href="https://thedaxads.com/top-choices-in-web-hosting" class="theme-btn">Read More</a>
+                                </div>
+                            </div>
+
+                            <div class="blog-item" data-aos="zoom-in">
+                                <div class="img-box">
+                                    <img src="assets/images/blog5.jpg" alt="Blog">
+                                </div>
+                                <div class="content">
+                                    <span class="meta">14 February 2021</span>
+                                    <h1><a href="https://thedaxads.com/the-future-is-multi-shaped">The Future Is Multi-shaped</a></h1>
+                                    <p>Our education system was designed to turn us into “I-shaped” people. I's are one dimensional, linear in nature
+                                    specialist of one domain. The world we live in now require more collaboration, more creativity than ever, we need to
+                                    move beyond the ‘I’.</p>
+                                    <a href="https://thedaxads.com/the-future-is-multi-shaped" class="theme-btn">Read More</a>
                                 </div>
                             </div>
                             
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <!-- <div class="col-md-4">
                         <div class="blog-sidebar">
                             <div class="blog-sidebar-inner">
 
@@ -199,7 +238,7 @@
 
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
