--- a/Portfolio/wasith/index.html
+++ b/Portfolio/wasith/index.html
@@ -170,11 +170,11 @@
                                 <div class="about-blog-box info-box shadow-box h-full">
                                     <a href="blog.html" class="overlay-link"></a>
                                     <img src="assets/images/bg1.png" alt="BG" class="bg-img">
-                                    <img src="assets/images/gfonts.png" alt="GFonts">
+                                    <img src="assets/images/icons8-google-blog-search.svg" alt="GFonts">
                                     <div class="d-flex align-items-center justify-content-between">
                                         <div class="infos">
-                                            <h4>Blog</h4>
-                                            <h1>GFonts</h1>
+                                            <h1>Our Blog</h1>
+                                            <!-- <h1>GFonts</h1> -->
                                         </div>
     
                                         <a href="blog.html" class="about-btn">
