--- a/Portfolio/wasith/about.html
+++ b/Portfolio/wasith/about.html
@@ -91,7 +91,7 @@
                         <div class="about-image-box shadow-box">
                             <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                             <div class="image-inner">
-                                <img src="assets/images/wasithportfolio.JPG" alt="About Me">
+                                <img src="assets/images/wasithportfolio1.JPG" alt="About Me">
                             </div>
                         </div>
                     </div>
@@ -116,7 +116,7 @@
 
                             <ul>
                                 <li>
-                                    <p class="date">5+ years</p>
+                                    <p class="date">7+ years</p>
                                     <h2>Digital Marketing Manager</h2>
                                     <p class="type">Dax Ads · Full-time</p>
                                 </li>
@@ -230,7 +230,7 @@
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                     <p class="copyright">
-                        &copy; All rights reserved by <span>WordPress River</span>
+                         &copy; All rights reserved by <span style="color: red;">DAX</span>
                     </p>
                 </div>
             </div>
