--- a/Portfolio/wasith/credentials.html
+++ b/Portfolio/wasith/credentials.html
@@ -92,16 +92,16 @@
                             <div class="shadow-box">
                                 <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                                 <div class="img-box">
-                                    <img src="assets/images/wasithportfolio.JPG" alt="About Me">
+                                    <img src="assets/images/wasithportfolio1.JPG" alt="About Me">
                                 </div>
                                 <h2>Abdul Wasith</h2>
                                 <p>@_wacheee_</p>
         
                                 <ul class="social-links d-flex justify-content-center">
-                                    <li><a href="#"><i class="iconoir-linkedin"></i></a></li>
-                                    <li><a href="#"><i class="iconoir-twitter"></i></a></li>
                                     <li><a href="https://www.instagram.com/_wacheee_/"><i class="iconoir-instagram"></i></a></li>
                                     <li><a href="https://www.facebook.com/wasith1"><i class="iconoir-facebook"></i></a></li>
+                                    <li><a href="#"><i class="iconoir-linkedin"></i></a></li>
+                                    <li><a href="#"><i class="iconoir-twitter"></i></a></li>
                                 </ul>
         
                                 <a href="contact.html" class="theme-btn">Contact Me</a>
@@ -251,7 +251,7 @@
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                     <p class="copyright">
-                        &copy; All rights reserved by <span>WordPress River</span>
+                         &copy; All rights reserved by <span style="color: red;">DAX</span>
                     </p>
                 </div>
             </div>
