--- a/Portfolio/wasith/index.html
+++ b/Portfolio/wasith/index.html
@@ -253,12 +253,12 @@
                                 </div>
 
                                 <div class="client-item">
-                                    <h1>+125</h1>
+                                    <h1>50+</h1>
                                     <p>CLIENTS <br>WORLDWIDE</p>
                                 </div>
 
                                 <div class="client-item">
-                                    <h1>+210</h1>
+                                    <h1>1000+</h1>
                                     <p>Total <br>Projects</p>
                                 </div>
                             </div>
@@ -296,7 +296,7 @@
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                     <p class="copyright">
-                        &copy; All rights reserved by <span>WordPress River</span>
+                         &copy; All rights reserved by <span style="color: red;">DAX</span>
                     </p>
                 </div>
             </div>
