--- a/blog.html
+++ b/blog.html
@@ -939,10 +939,9 @@
 							<div class="margin-top-10">
 								<a href="https://g.page/dax-ads-kannur?share" target="_blank"
 									class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">
-									DAX Ads <br>
-									Pannenpara Road, <br>
-									PO. Pallikunnu <br>
-									Kannur, Pin :67004
+									18/2, Suite 101,<br>  Wellington Street,
+									Richmond Town, <br>
+									Bangalore 560025 <br>
 								</a>
 							</div>
 						</div>
