--- a/contact.html
+++ b/contact.html
@@ -424,27 +424,28 @@
 									</span>
 									<span class="list__item">
 										<span class="d-inline-block hidden-box">
-											<span class="subhead-xxs anim-reveal tr-delay-02">Pannenpara Road,
+											<span class="subhead-xxs anim-reveal tr-delay-02">18/2, Suite 101  
+												 
 												</span>
 										</span>
 									</span>
 									<span class="list__item">
 										<span class="d-inline-block hidden-box">
-											<span class="subhead-xxs anim-reveal tr-delay-02">PO. Pallikunnu
+											<span class="subhead-xxs anim-reveal tr-delay-02">Wellington Street,
 											</span>
 										</span>
 									</span>
 									<span class="list__item">
 										<span class="d-inline-block hidden-box">
-											<span class="subhead-xxs anim-reveal tr-delay-03">Kannur, Pin :67004</span>
+											<span class="subhead-xxs anim-reveal tr-delay-03">Richmond Town, <br> Bangalore 560025 </span>
 										</span>
 									</span>
 								</h6>
-								<div class="padding-top-10 anim-fade tr-delay-04">
+								<!-- <div class="padding-top-10 anim-fade tr-delay-04">
 									<a href="https://g.page/dax-ads-kannur?share" target="_blank"
 										class="subhead-xxs text-color-dadada text-hover-to-red js-pointer-small">Open in
 										google maps</a>
-								</div>
+								</div> -->
 							</div>
 						</div><!-- column end -->
 						<!-- column start -->
@@ -720,10 +721,9 @@
 							<div class="margin-top-10">
 								<a href="https://g.page/dax-ads-kannur?share" target="_blank"
 									class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">
-									DAX Ads <br>
-									Pannenpara Road, <br>
-									PO. Pallikunnu <br>
-									Kannur, Pin :67004
+									18/2, Suite 101,<br>  Wellington Street,
+									Richmond Town, <br>
+									Bangalore 560025 <br>
 								</a>
 							</div>
 						</div>
