--- a/web-development.html
+++ b/web-development.html
@@ -271,9 +271,9 @@
 						</div>
 						<div class="nav-fade-anim js-nav-anim margin-top-10">
 							<a href="https://g.page/dax-ads-kannur?share" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">
-								DAX #1st Floor <br>
-								Arafa Complex, Aarat Road,<br>
-								Kannur, Pin :670001
+																		18/2, Suite 101,<br>  Wellington Street,
+Richmond Town, <br>
+Bangalore 560025 <br>
 							</a>
 						</div>
 					</div><!-- nav-address end -->
