--- a/index.html
+++ b/index.html
@@ -310,9 +310,9 @@
 						</div>
 						<div class="nav-fade-anim js-nav-anim margin-top-10">
 							<a href="https://g.page/dax-ads-kannur?share" target="_blank" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">
-								DAX #1st Floor <br>
-								Arafa Complex, Aarat Road,<br>
-								Kannur, Pin :670001
+																		18/2, Suite 101,<br>  Wellington Street,
+Richmond Town, <br>
+Bangalore 560025 <br>
 							</a>
 						</div>
 					</div><!-- nav-address end -->
@@ -1046,10 +1046,9 @@
 								<div class="headline-xxxxs">Address</div>
 								<div class="margin-top-10">
 									<a href="https://g.page/dax-ads-kannur?share"  target="_blank" class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">
-										DAX Ads <br>
-										Pannenpara Road, <br>
-										PO. Pallikunnu <br>
-										Kannur, Pin :67004
+										18/2, Suite 101,<br>  Wellington Street,
+Richmond Town, <br>
+Bangalore 560025 <br>
 									</a>
 								</div>
 							</div>
